[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.black]
exclude = '''
/(
  | \.git
  | \.mypy_cache
  | _build
  | build
  | dist
)/
'''
line-length = 79

[tool.coverage.run]
omit = ["whitelist.py", "readmetester/__main__.py"]

[tool.poetry]
authors = ["jshwi <stephen@jshwisolutions.com>"]
description = "Parse, test, and assert RST code-blocks"
license = "MIT"
name = "readmetester"
version = "1.0.1"

[tool.poetry.dependencies]
Pygments = "^2.8.1"
object-colors = "^2.0.0"
python = "^3.8"

[tool.poetry.dev-dependencies]
bump2version = "^1.0.1"
ipython = "^7.19.0"
prompt-toolkit = "^3.0.13"
pyaud = "^3.1.0"
pytest = "^6.2.1"
restview = "^2.9.2"

[tool.poetry.scripts]
readmetester = "readmetester:main"

[tool.pytest.ini_options]
addopts = [
    "--durations=5",
     "-vv",
     "--color=yes",
     "--cov-report",
     "term-missing"
]
filterwarnings = "ignore::DeprecationWarning"
norecursedirs = ["docs", "*.egg-info", ".git", ".mypy_cache", ".idea", "prof"]

[tool.pyaud.clean]
exclude = ["*.egg*", ".mypy_cache", ".env", "instance"]

[tool.pyaud.logging]
version = 1
disable_existing_loggers = true

[tool.pyaud.indexing]
exclude = ["whitelist.py", "conf.py", "setup.py"]

[tool.pyaud.audit]
modules = [
    "files",
    "format",
    "format-docs",
    "format-str",
    "imports",
    "typecheck",
    "unused",
    "lint",
    "coverage",
    "readme",
    "docs",
]

[tool.pyaud.logging.root]
level = "DEBUG"
handlers = ["default"]
propagate = false

[tool.pyaud.logging.formatters.standard]
format = "%(asctime)s %(levelname)s %(name)s %(message)s"

[tool.pyaud.logging.handlers.default]
class = "logging.handlers.TimedRotatingFileHandler"
formatter = "standard"
when = "d"
backupCount = 60
filename = "~/.cache/pyaud/log/pyaud.log"
