[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.black]
exclude = '''
/(
  | \.git
  | \.mypy_cache
  | _build
  | build
  | dist
)/
'''
line-length = 79
skip-magic-trailing-comma = true

[tool.coverage]

[tool.coverage.report]
fail_under = 100

[tool.coverage.run]
omit = ["readmetester/__main__.py", "whitelist.py"]

[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 79
multi_line_output = 3
profile = "black"
use_parentheses = true

[tool.poetry]
authors = ["jshwi <stephen@jshwisolutions.com>"]
description = "Parse, test, and assert RST code-blocks"
license = "MIT"
name = "readmetester"
readme = "README.rst"
version = "2.3.0"

[tool.poetry.dependencies]
Pygments = "^2.8.1"
object-colors = "^2.0.0"
pyproject-parser = ">=0.4.3,<0.8.0"
python = "^3.8"
restructuredtext-lint = "^1.4.0"

[tool.poetry.group.dev.dependencies]
bump2version = "^1.0.1"
ipython = "^8.6.0"
pre-commit = "^2.21.0"
prompt-toolkit = "^3.0.36"
pyaud = "^4.0.2"
pytest = "^7.2.0"
pytest-randomly = "^3.12.0"
restview = "^3.0.0"
templatest = "^0.6.0"
toml-sort = "^0.20.1"

[tool.poetry.scripts]
readmetester = "readmetester:main"

[tool.pyaud.audit]
modules = [
  "coverage",
  "docs",
  "files",
  "format",
  "format-docs",
  "format-str",
  "imports",
  "lint",
  "readme",
  "typecheck",
  "unused"
]

[tool.pyaud.clean]
exclude = ["*.egg*", ".env", ".mypy_cache", "instance"]

[tool.pyaud.indexing]
exclude = ["conf.py", "setup.py", "whitelist.py"]

[tool.pyaud.logging]
disable_existing_loggers = true
version = 1

[tool.pyaud.logging.formatters.standard]
format = "%(asctime)s %(levelname)s %(name)s %(message)s"

[tool.pyaud.logging.handlers.default]
backupCount = 60
class = "logging.handlers.TimedRotatingFileHandler"
filename = "~/.cache/pyaud/log/pyaud.log"
formatter = "standard"
when = "d"

[tool.pyaud.logging.root]
handlers = ["default"]
level = "DEBUG"
propagate = false

[tool.pytest.ini_options]
addopts = [
  "--color=yes",
  "--cov-report",
  "--durations=5",
  "-vv",
  "term-missing"
]
filterwarnings = "ignore::DeprecationWarning"
norecursedirs = ["*.egg-info", ".git", ".idea", ".mypy_cache", "docs", "prof"]

[tool.readmetester]
style = "monokai"
